# rs-oui-data

./: Cargo.toml  README.md  build.rs  update_data.sh
src/: lib.rs
