[package]
name = "oui-data"
version = "0.1.2"
edition = "2021"
authors = ["Jason Walton"]
license = "MIT"
keywords = ["oui", "mac"]
repository = "https://github.com/jwalton/rs-oui-data"
description = "Library for looking up information from the IEEE OUI database."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }

[build-dependencies]
csv = "1.3.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
